<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ShuzobotwidgetActivity!</string>
    <string name="app_name">1修造が言う</string>
    <string name="widget_14">1修造が言う（1×4）</string>
    <string name="widget_23">1修造が言う（2×3）</string>
    <string name="buttn_config">設定</string>
    <string name="twitter_null_message">大丈夫だ！何度でもやり直すんだ！設定を見直すんだ！</string>
    <string name="pleaseanother_createFrinedship">ブラウザか別のアプリケーションnフォローしてください。</string>
	<string name="init_message">あわてるな！人生待つことも大事だ！でも熱い心は忘れるな！</string>
	<string name="signin_message">アイコンをクリックしてサインインだ！</string>
	<string name="gettimeline_message">修造ゲットだぜぇぇぇぇぇぇぇ!</string>
	<string name="fileerror_message">人生いくらでもやり直すことはできるぞ！データを消去してもう一度SignInだ！俺についてこい！！</string>
	<string name="errorGetTimeline">Networkがおかしいぞ！足腰を鍛えば強くなれる！フットワークを軽くすれば、絶対追いつけるぞ！</string>
	<string name="errorWidgetAlready">二兎を追うもの一頭も得ずだ！複数のウィジットは設定できないんだ。ひとつのことに集中だ!</string>
	<!-- PreferenceKey -->
	<string name="pfkey_signin">signin</string>
	<string name="pfkey_wifiony">wifionly</string>
	<string name="pfkey_access">access</string>
	<string name="pfkey_widget">widget</string>
	<string name="pfkey_screenname">screenname</string>
	<string name="pfkey_accesstoken">accesstoken</string>
	<string name="pfkey_accesstokensecret">accesstokensecret</string>
	<string name="pfkey_about">about</string>
	<!-- Preference Category -->
	<string name ="category_account">Twitterのアカウント</string>
	<string name ="category_wifi">通信設定</string>
	<string name ="category_access_time">Twitterアクセス間隔</string>
	<string name ="category_widget_update">ウィジットへの表示間隔</string>
	<string name ="category_else">その他</string>
	<!-- Preference -->
	<string name="menu_oauth">サインイン</string>
	<string name="menu_wifionly">WiFi接続時のみ更新</string>
	<string name="menu_update_typte">取得方法</string>
	<string name="menu_access_update">Twitterアクセス間隔時間</string>
	<string name="menu_widget_update">ウィジット表示更新間隔</string>
	<string name="menu_about">このアプリケーションについて</string>
	
	<!-- Summary -->
	<string name="summary_widget_update">間隔で熱いメッセージを表示します。</string>
	<string name="summary_oauth">サインインしてアプリケーションの認証してください。</string>
	<string name="summary_oauth_signin">サインインしています。</string>
	<string name="summary_wifionly_off">チェックするとWiFi接続時のみTwitterにアクセスします。</string>
	<string name="summary_wifionly_on">チェックを外すといつでもTwitterにアクセスします。</string>
	<string name="summary_access_update">間隔でTwitterにアクセスします。</string>
	<string name ="summary_update_type_user">アイコンをクリックするとTwitterへアクセスします。</string>
	<string name="summary_update_type_auto">間隔でTwitterにアクセスします。</string>
	<string name="summary_about">このアプリケーションについて、少しだけ説明します。</string>
	<!-- デフォルト表示 -->

	<!-- デフォルトvalue -->
	<string name="defaultValuewifionly">true</string>
	<string name="defaultValueUpdateType">true</string>
	<string name="defaultEntreisAccessUpdate">アイコンをクリック</string>
	<string name="defaultValueAccessUpdate">-1</string>
	<string name="defaulEntreisWidgetUpdate">30分</string>
	<string name="defaultValueWidgetUpdate">1800000</string>
	
	<!-- ImageViewでAccessbiltyがでる対策 -->
	<string name="contentDescription">リソースが取得できません</string>
</resources>